--- a/index.html
+++ b/index.html
@@ -74,16 +74,16 @@
     .dateSlider{
       position: absolute;
       left: 60px;
-      bottom: 40px;
+      bottom: 10%;
       z-index: 1000;
-      width: 200px;
+      width: 30%;
     }
-    @media (max-width:700px){
+    /*@media (max-width:700px){
       .dateSlider {
         bottom: 100px;
         width: 150px;
       }
-    }
+    }*/
     .birdList {
       position: absolute;
       right: 0px;
