--- a/index.html
+++ b/index.html
@@ -73,17 +73,16 @@
     }
     .dateSlider{
       position: absolute;
-      left: 60px;
+      left: 50px;
       bottom: 10%;
       z-index: 1000;
       width: 30%;
     }
-    /*@media (max-width:700px){
+    @media (max-width:700px){
       .dateSlider {
-        bottom: 100px;
-        width: 150px;
+        width: 50%;
       }
-    }*/
+    }
     .birdList {
       position: absolute;
       right: 0px;
